--- a/public/css/propios.css
+++ b/public/css/propios.css
@@ -134,7 +134,6 @@ h3{
     margin-bottom:15px;
     color:#333;
     text-align:left;
-    
     overflow:hidden;
     border: 1px solid #d5d5d5;
     border-bottom: 6px solid #d5d5d5;
@@ -148,9 +147,11 @@ h3{
     margin: 0 .3em;
 }
 .pinto .info {
-    padding:1.3em 15px;
+    padding:1em 15px;
     background-color:#fff;
+    position: relative;
 }
+
 .pinto .info h2 {
     margin:0;
     font-size:1.1em;
@@ -158,9 +159,24 @@ h3{
     color: #3984B9;
     line-height: 1.3em;
 }
-.pinto .info p {
-    margin:10px 0 0;
-    font-size:14px;
+.pinto .info .publicado{
+    position: absolute;
+    right: -6px;
+    margin-right: .3em;
+    top: -2em;
+    background: rgba(255, 255, 255, .8);
+    padding: .1em .5em;
+    border-radius: 3px 0 0 3px;
+}
+.pinto .info .publicado p {
+    font-size: 12px;
+    font-style: italic;
+    color: #636363;
+    margin: 0
+}
+
+.pinto .info .publicado p img{
+    margin-left:.5em;
 }
 
 .pinto .opciones{
