--- a/resources/assets/sass/propios.scss
+++ b/resources/assets/sass/propios.scss
@@ -478,6 +478,7 @@ footer{
     justify-content: center;
     align-items: center;
     padding: 2em;
+    
     .login-caja{
         min-width: 340px;
         max-width: 360px;
@@ -498,6 +499,18 @@ footer{
             margin-top: 3em;
             font-family: 'Ek Mukta', sans-serif;
             font-size: 1.2em;
+            .recuperar-pass{
+                margin: 2em 0 1em 0;
+                h5{
+                    font-family: 'Ek Mukta', sans-serif;
+                    font-size: 1.2em;
+                    margin:0;
+                    padding: 0;
+                    font-weight: normal;
+                    text-align: center;
+                    color: #2778C4;
+                }
+            }
             .error{
                 font-family: 'Ek Mukta', sans-serif;
                 font-size: 1em;
