--- a/resources/assets/sass/propios.scss
+++ b/resources/assets/sass/propios.scss
@@ -8,7 +8,7 @@ a:hover{text-decoration: none;}
 html, body{
     width: 100%;
     height: 100%;
-    
+    background-color: white;
 
 }
 
@@ -178,7 +178,44 @@ html, body{
 
 
 /**------- BLOG -------**/
-
+.blog{
+    .titulos{
+        font-family: 'Ek Mukta', sans-serif;
+        margin-bottom: 1em;
+        color: black;
+        background-color:#f5f5f5;
+        padding: .4em 0 .4em 1.5em;
+        position: relative;
+        .bolita{
+            position: absolute;
+            left: -.5em;
+            top: .25em;
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background: red;
+            border:4px solid white;
+        }
+    }
+    .bienvenido{
+        .linea{
+            background-color: #ededed;
+            width: 100%;
+            height: 2px;
+            margin: 1em 0;
+            padding: 0;
+        }
+        p{
+            font-family: 'Ek Mukta', sans-serif;
+        }
+        h4{
+            font-family: 'Lobster', cursive;
+            font-size: 1.6em;
+            font-weight: normal;
+            margin: .5em 0 .5em 0;
+        }
+    }
+}
 /****--MENU BLOG---*/
 .menu{
     border-bottom: 1px solid #d5d5d5;
@@ -341,7 +378,7 @@ html, body{
 /*    --- GRID   ----**/
 #container-01,
 #container-02 {
-    margin:10px auto;
+    margin:1em auto;
     max-width:800px;
 }
 
