--- a/resources/assets/sass/propios.scss
+++ b/resources/assets/sass/propios.scss
@@ -514,7 +514,7 @@ html, body{
     color: black;
 }
 .articulo hr{
-    margin: 1.8em 0;
+    margin: .8em 0 1em 0;
 }
 
 /*----------- CONTENIDO ------------*/
@@ -525,18 +525,18 @@ html, body{
     
     color: black; 
     font-weight: bold; 
-    font-family: 'Fjalla One', sans-serif;
-    margin: 1.2em 0;
+    font-family: 'Ek Mukta', sans-serif;
+    margin: .8em 0;
 }
-.contenido h1{ font-size: 20px !important; font-weight: 200 !important;}
-.contenido h2{ font-size: 17px !important; font-weight: 200 !important;}
-.contenido h3{ font-size: 17px !important; font-weight: 200 !important;}
-.contenido h4{ font-size: 17px !important; font-weight: 200 !important;}
-.contenido h5{ font-size: 17px !important; font-weight: 200 !important;}
-.contenido h6{ font-size: 17px !important; font-weight: 200 !important;}
+.contenido h1{ font-size: 25px !important; font-weight: 400 !important;}
+.contenido h2{ font-size: 20px !important; font-weight: 400 !important;}
+.contenido h3{ font-size: 20px !important; font-weight: 400 !important;}
+.contenido h4{ font-size: 20px !important; font-weight: 400 !important;}
+.contenido h5{ font-size: 20px !important; font-weight: 400 !important;}
+.contenido h6{ font-size: 20px !important; font-weight: 400 !important;}
 
 .contenido p{
-    font-size: 1.2em;
+    font-size: 1.1em;
     color: #333;
 }
 
@@ -785,6 +785,53 @@ footer{
     border-radius: 0;
 }
 
+/*ERROR 404*/
+.contenido-error{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .error {
+        width: 320px;
+        height: 185px;
+        .icono{
+            background-color:#d80027;
+            height: 75px;
+            width: 75px;
+            border-radius: 50%;
+            margin: 0 auto;
+            background-image: url('img/unlink.svg'); 
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 50%;
+        }
+        p{
+            font-family: 'Raleway', sans-serif;
+            font-weight: normal;
+            text-align: center;
+            font-size: 1.2em;
+            margin: 1em 0 .2em 0;
+        }
+        a{
+            margin: 0 auto;
+            width: 160px;
+            display: block;
+            border: 1px solid #d80027;
+            text-align: center;
+            border-radius: 12px;
+            padding: .5em 0;
+            color: #d80027;
+            font-size: .9em;
+        }
+        hr{
+            background: #f5f5f5;
+            height: 2px;
+            width: 100%;
+            margin: .8em 0 1.2em 0;
+        }
+    }
+}
 
 
 
