--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,8 +17,8 @@ body{
     }
 }
 /*ADMIN*/
-#mmceu_80{
-    display: none !important;
+#mceu_102{
+    display: none;
 }
 .admin, p{
     font-family: 'Ek Mukta', sans-serif;
