--- a/resources/assets/sass/propios.scss
+++ b/resources/assets/sass/propios.scss
@@ -933,6 +933,21 @@ footer{
         font-weight: 200;
         text-align: center;
     }
+    .carousel{
+        padding: 0 3em;
+        color: white;
+        font-family: 'Raleway', sans-serif;
+        font-size: 1.6em;
+        font-weight: 200;
+        text-align: center;
+    }
+    .btn-entrar{
+        width: 100%;
+        margin: 0 auto;
+        position: absolute;
+        bottom: -4.7em !important;
+    }
+
 }
 
 
